<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation"
  app:startDestination="@id/welcomeFragment">

  <fragment
    android:id="@+id/welcomeFragment"
    android:name="com.carkzis.android.silenus.welcome.WelcomeFragment"
    android:label="fragment_welcome"
    tools:layout="@layout/fragment_welcome" >
    <action
      android:id="@+id/action_welcomeFragment_to_loginFragment"
      app:destination="@id/loginFragment"
      app:popUpTo="@id/navigation"
      app:popUpToInclusive="true" />
    <action
      android:id="@+id/action_welcomeFragment_to_yourReviewsFragment"
      app:destination="@id/yourReviewsFragment" />
  </fragment>
  <fragment
    android:id="@+id/loginFragment"
    android:name="com.carkzis.android.silenus.user.LoginFragment"
    android:label="fragment_login"
    tools:layout="@layout/fragment_login" >
    <action
      android:id="@+id/action_loginFragment_to_welcomeFragment"
      app:destination="@id/welcomeFragment"
      app:popUpTo="@id/navigation"
      app:popUpToInclusive="true" />
  </fragment>
  <fragment
    android:id="@+id/addReviewFragment"
    android:name="com.carkzis.android.silenus.review.AddReviewFragment"
    android:label="fragment_add_review"
    tools:layout="@layout/fragment_add_review" >
    <action
      android:id="@+id/action_addReviewFragment_to_loginFragment"
      app:destination="@id/loginFragment"
      app:popUpTo="@id/loginFragment"
      app:popUpToInclusive="true" />
    <action
      android:id="@+id/action_addReviewFragment_to_mapsFragment"
      app:destination="@id/mapsFragment" >
      <argument
        android:name="yourReviewsMapLocation"
        app:argType="string[]"
        android:defaultValue="@null"
        app:nullable="true" />
    </action>
    <action
      android:id="@+id/action_addReviewFragment_to_yourReviewsFragment"
      app:destination="@id/yourReviewsFragment"
      app:popUpTo="@id/yourReviewsFragment"
      app:popUpToInclusive="true" />
  </fragment>
  <fragment
    android:id="@+id/mapsFragment"
    android:name="com.carkzis.android.silenus.MapsFragment"
    android:label="fragment_maps"
    tools:layout="@layout/fragment_maps" >
    <action
      android:id="@+id/action_mapsFragment_to_addReviewFragment"
      app:destination="@id/addReviewFragment"
      app:popUpTo="@id/addReviewFragment"
      app:popUpToInclusive="true" />
    <argument
      android:name="yourReviewsMapLocation"
      app:argType="string[]"
      app:nullable="true" />
    <action
      android:id="@+id/action_mapsFragment_to_editReviewFragment"
      app:destination="@id/editReviewFragment"
      app:popUpTo="@id/editReviewFragment"
      app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_mapsFragment_to_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/loginFragment"
        app:popUpToInclusive="true" />
  </fragment>
  <fragment
    android:id="@+id/yourReviewsFragment"
    android:name="com.carkzis.android.silenus.review.YourReviewsFragment"
    android:label="fragment_your_reviews"
    tools:layout="@layout/fragment_your_reviews" >
    <action
      android:id="@+id/action_yourReviewsFragment_to_mapsFragment"
      app:destination="@id/mapsFragment" >
      <argument
        android:name="yourReviewsMapLocation"
        app:argType="string[]" />
    </action>
    <action
      android:id="@+id/action_yourReviewsFragment_to_singleReviewFragment"
      app:destination="@id/singleReviewFragment" />
    <action
      android:id="@+id/action_yourReviewsFragment_to_addReviewFragment"
      app:destination="@id/addReviewFragment" />
    <action
        android:id="@+id/action_yourReviewsFragment_to_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/loginFragment"
        app:popUpToInclusive="true" />
  </fragment>
  <fragment
    android:id="@+id/singleReviewFragment"
    android:name="com.carkzis.android.silenus.review.SingleReviewFragment"
    android:label="fragment_single_review"
    tools:layout="@layout/fragment_single_review" >
    <action
      android:id="@+id/action_singleReviewFragment_to_mapsFragment"
      app:destination="@id/mapsFragment" >
    <argument
      android:name="yourReviewsMapLocation"
      app:argType="string[]" />
    </action>
    <action
      android:id="@+id/action_singleReviewFragment_to_editReviewFragment"
      app:destination="@id/editReviewFragment" />
    <action
        android:id="@+id/action_singleReviewFragment_to_yourReviewsFragment"
        app:destination="@id/yourReviewsFragment"
        app:popUpTo="@id/yourReviewsFragment"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_singleReviewFragment_to_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/loginFragment"
        app:popUpToInclusive="true" />
  </fragment>
  <fragment
    android:id="@+id/editReviewFragment"
    android:name="com.carkzis.android.silenus.review.EditReviewFragment"
    android:label="fragment_edit_review"
    tools:layout="@layout/fragment_edit_review" >
    <action
      android:id="@+id/action_editReviewFragment_to_mapsFragment"
      app:destination="@id/mapsFragment" >
    <argument
      android:name="yourReviewsMapLocation"
      app:argType="string[]"
      android:defaultValue="@null"
      app:nullable="true" />
    </action>
    <action
      android:id="@+id/action_editReviewFragment_to_singleReviewFragment"
      app:destination="@id/singleReviewFragment"
      app:popUpTo="@id/singleReviewFragment"
      app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_editReviewFragment_to_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/loginFragment"
        app:popUpToInclusive="true" />

  </fragment>

</navigation>