...
        android:clickable="true"
        android:src="@android:drawable/ic_menu_set_as" />

    </LinearLayout>

    <TextView
      android:id="@+id/welcome_user"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@{@string/welcome_user(welcomeViewModel.username)}"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="@+id/logout_linearLayout"
      app:layout_constraintEnd_toStartOf="@+id/logout_linearLayout"
...
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hub_text">

      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reviews_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_myplaces"
        tools:layout_editor_absoluteX="141dp"
...
