...
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_bar_text">

      <TableRow
        android:id="@+id/edit_name_bar_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/edit_name_bar_text"
          android:layout_width="match_parent"
...
          android:autoSizeTextType="uniform"
          android:text="@string/location_bar_text"
          android:textAlignment="center"
          android:textSize="20sp" />

        <EditText
          android:id="@+id/edit_location_bar_edittext"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:autofillHints="name_bar"
          android:clickable="false"
          android:cursorVisible="false"
...
